<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/shape"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:layout_marginBottom="60dp"
    android:layout_marginTop="20dp"
    android:padding="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_margin="8dp"
        android:text="HELP EDUCATEME"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_marginTop="44dp"
        android:text="Email"
        android:textStyle="bold"
        android:gravity="left"
        android:textSize="17sp" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/emailreq"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_marginTop="72dp"
        android:text="@string/emailreq"
        android:textStyle="italic"
        android:gravity="left"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/emailreq"
        android:layout_marginTop="24dp"
        android:text="Password"
        android:textStyle="bold"
        android:gravity="left"
        android:textSize="17sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:id="@+id/passreq"
        android:layout_below="@id/emailreq"
        android:layout_marginTop="52dp"
        android:text="@string/passreq"
        android:textStyle="italic"
        android:gravity="left"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/passreq"
        android:layout_marginTop="24dp"
        android:text="Login"
        android:textStyle="bold"
        android:gravity="left"
        android:textSize="17sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/passreq"
        android:layout_marginTop="52dp"
        android:text="@string/loginreq"
        android:textStyle="italic"
        android:id="@+id/loginreq"
        android:gravity="left"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/loginreq"
        android:layout_marginTop="24dp"
        android:text="Register"
        android:textStyle="bold"
        android:gravity="left"
        android:textSize="17sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/loginreq"
        android:layout_marginTop="52dp"
        android:text="@string/registerreq"
        android:textStyle="italic"
        android:id="@+id/registerreq"
        android:gravity="left"
        android:textSize="15sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/registerreq"
        android:layout_marginTop="24dp"
        android:text="Forgot"
        android:textStyle="bold"
        android:gravity="left"
        android:textSize="17sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3c3c44"
        android:layout_below="@id/registerreq"
        android:layout_marginTop="52dp"
        android:text="@string/forgotreq"
        android:textStyle="italic"
        android:gravity="left"
        android:textSize="15sp" />
    </RelativeLayout>
</ScrollView>